--- a/views/header.jade
+++ b/views/header.jade
@@ -16,6 +16,6 @@ div.navbar.navbar-inverse.navbar-fixed-top(role='navigation')
 				li(class=title=='Incidents'?'active':undefined)
 					a(href="/incidents") Incidents
 				li(class=title=='Map'?'active':undefined)
-					a(href="/map") Map
+					a(href="/map") Google
 
 div#newsAlerts.alert.alert-info.alert-dismissable(role='alert')
