switched to heroku database

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,7 +8,7 @@ html
     script(src='/javascripts/bootstrap.min.js')
 
     if (title=='Map')
-        script(src='https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyDwOqt4XjrPcLzKPIKPpwK5CcLlVbjq9y4&sensor=true')
+        script(src='https://maps.googleapis.com/maps/api/js?v=3')
 
   body
     include header
