--- a/views/reports.jade
+++ b/views/reports.jade
@@ -10,6 +10,7 @@ block content
       th Source NickName
       th Author
       th Content
+      th Sentiment Score
     tbody
       each report, i in reports
         tr
@@ -17,3 +18,4 @@ block content
               a(href='/reports/' + report._id)=report._sourceNickname
           td= report.author
           td= report.content
+          td= analyze(report.content).score
