--- a/views/map.jade
+++ b/views/map.jade
@@ -1,16 +1,59 @@
 extends layout
 
 block content
-  script.
-    function initialize() { 
-      var mapOptions = {
-        center: { lat: -34.397, lng: 150.644},
-        zoom: 8
-      };
-      var map = new google.maps.Map(document.getElementById('map-canvas'),
-        mapOptions);
-    }
-    google.maps.event.addDomListener(window, 'load', initialize); 
-  h1.
-    Map
-  div.container#map-canvas
+	meta(name='viewport', content='initial-scale=1.0, user-scalable=no')
+	meta(charset='utf-8')
+	title Geocoding service
+	style.
+		html, body, #map-canvas {
+		height: 100%;
+		margin: 0px;
+		padding: 0px;
+		top:50px;
+		}
+		#panel {
+		position: absolute;
+		top: 100px;
+		left: 50%;
+		margin-left: -180px;
+		z-index: 5;
+		background-color: #fff;
+		padding: 5px;
+		border: 1px solid #999;
+		}
+	script.
+		console.log('Hello')
+	script.
+		var geocoder;
+		var map;
+		function initialize() {
+		geocoder = new google.maps.Geocoder();
+		var latlng = new google.maps.LatLng(7.6667, 5.2500);
+		var mapOptions = {
+		zoom: 8,
+		center: latlng
+		}
+		map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
+		}
+		function codeAddress() {
+		var address = document.getElementById('address').value;
+		geocoder.geocode( { 'address': address}, function(results, status) {
+		if (status == google.maps.GeocoderStatus.OK) {
+		map.setCenter(results[0].geometry.location);
+		var marker = new google.maps.Marker({
+		map: map,
+		position: results[0].geometry.location
+		});
+		} else {
+		alert('Geocode was not successful for the following reason: ' + status);
+		}
+		});
+		}
+		console.log('hi')
+		google.maps.event.addDomListener(window, 'load', initialize);
+	div#panel
+		input#address(type='textbox', value='Sydney, NSW')
+		input(type='button', value='Geocode', onclick='codeAddress()')
+	div#map-canvas
+		
+
