--- a/views/map.jade
+++ b/views/map.jade
@@ -13,7 +13,7 @@ block content
 		}
 		#panel {
 		position: absolute;
-		top: 100px;
+		top: 75px;
 		left: 50%;
 		margin-left: -180px;
 		z-index: 5;
@@ -36,7 +36,8 @@ block content
 		map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
 		}
 		function codeAddress() {
-		var address = document.getElementById('address').value;
+		var a = document.getElementById('address');
+		var address = a.options[a.selectedIndex].text;
 		geocoder.geocode( { 'address': address}, function(results, status) {
 		if (status == google.maps.GeocoderStatus.OK) {
 		map.setCenter(results[0].geometry.location);
@@ -52,7 +53,13 @@ block content
 		console.log('hi')
 		google.maps.event.addDomListener(window, 'load', initialize);
 	div#panel
-		input#address(type='textbox', value='Sydney, NSW')
+		select#address
+			option(value='Select value') Select City
+			option(value='Ekiti') Ekiti
+			option(value='Benin City') Benin City
+			option(value='Port Harcourt') Port Harcourt
+			option(value='Kano') Kano
+			option(value='Ibadan') Ibadan
 		input(type='button', value='Geocode', onclick='codeAddress()')
 	div#map-canvas
 		
