--- a/views/header.jade
+++ b/views/header.jade
@@ -17,5 +17,7 @@ div.navbar.navbar-inverse.navbar-fixed-top(role='navigation')
 					a(href="/incidents") Incidents
 				li(class=title=='Map'?'active':undefined)
 					a(href="/map") Google
+				li(class=title=='Viz'?'active':undefined)
+					a(href="/viz") Visualizations
 
 div#newsAlerts.alert.alert-info.alert-dismissable(role='alert')
