--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,6 +6,9 @@ html
     link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
     script(src='/javascripts/jquery-2.1.1.min.js')
     script(src='/javascripts/bootstrap.min.js')
+    
+    if(title == 'Viz')
+        script(src='/javscripts/snap.svg.js')
 
     if (title=='Map')
         script(src='https://maps.googleapis.com/maps/api/js?v=3')
