d3 clock thingy starter example

--- a/views/header.jade
+++ b/views/header.jade
@@ -16,6 +16,8 @@ div.navbar.navbar-inverse.navbar-fixed-top(role='navigation')
 				li(class=title=='Incidents'?'active':undefined)
 					a(href="/incidents") Incidents
 				li(class=title=='Map'?'active':undefined)
-					a(href="/map") Google
+					a(href="/map") Map
+				li(class=title=='Viz'?'active':undefined)
+					a(href="/viz") Viz
 
 div#newsAlerts.alert.alert-info.alert-dismissable(role='alert')
