--- a/views/map.jade
+++ b/views/map.jade
@@ -57,6 +57,6 @@ block content
 			each location , i in locations
 				option(value=location.locationName)=location.locationName
 		input(type='button', value='Geocode', onclick='codeAddress()')
-	div#map-canvas
+	div#map-canvas.container
 		
 
