--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,6 +6,7 @@ html
     link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
     script(src='/javascripts/jquery-2.1.1.min.js')
     script(src='/javascripts/bootstrap.min.js')
+    script(src='/javascripts/d3.min.js')
 
     if (title=='Map')
         script(src='https://maps.googleapis.com/maps/api/js?v=3')
