--- a/views/index.jade
+++ b/views/index.jade
@@ -3,3 +3,86 @@ extends layout
 block content
   h1= title
   p Welcome to #{title} Information Flow Diagram Here
+  script(src='http://code.highcharts.com/highcharts.js')
+  script(src='http://code.highcharts.com/modules/exporting.js')
+  div#block(style='min-width: 310px; height: 400px; margin: 0 auto')
+  script.
+    $(function () {
+    $(document).ready(function () {
+    Highcharts.setOptions({
+    global: {
+    useUTC: false
+    }
+    });
+
+    $('#block').highcharts({
+    chart: {
+    type: 'spline',
+    animation: Highcharts.svg, // don't animate in old IE
+    marginRight: 10,
+    events: {
+    load: function () {
+
+    // set up the updating of the chart each second
+    var series = this.series[0];
+    setInterval(function () {
+    var x = (new Date()).getTime(), // current time
+    y = Math.ceil(Math.random()*10);
+    series.addPoint([x, y], true, true);
+    }, 1000);
+    }
+    }
+    },
+    title: {
+    text: 'Aggie Reports per Second'
+    },
+    xAxis: {
+    type: 'datetime',
+    tickPixelInterval: 150
+    },
+    yAxis: {
+    title: {
+    text: 'Number of Reports'
+    },
+    plotLines: [{
+    value: 0,
+    width: 1,
+    color: '#808080'
+    }]
+    },
+    tooltip: {
+    formatter: function () {
+    return '<b>' + this.series.name + '</b><br/>' +
+    Highcharts.dateFormat('%Y-%m-%d %H:%M:%S', this.x) + '<br/>' +
+    Highcharts.numberFormat(this.y*10, 2);
+    }
+    },
+    legend: {
+    enabled: false
+    },
+    credits:{
+    enabled:false
+    },
+    exporting: {
+    enabled: false
+    },
+    series: [{
+    name: 'Number of Reports',
+    data: (function () {
+    // generate an array of random data
+    var data = [],
+    time = (new Date()).getTime(),
+    i;
+
+    for (i = -19; i <= 0; i += 1) {
+    data.push({
+    x: time + i * 1000,
+    y: Math.ceil(Math.random()*10)
+    });
+    }
+    return data;
+    }())
+    }]
+    });
+    });
+    });
