--- a/views/map.jade
+++ b/views/map.jade
@@ -22,7 +22,7 @@ block content
 		border: 1px solid #999;
 		}
 	script.
-		console.log('Hello')
+		console.log(location);
 	script.
 		var geocoder;
 		var map;
