--- a/views/viz.jade
+++ b/views/viz.jade
@@ -82,12 +82,12 @@ block content
          
         // Mapping of step names to colors.
         var colors = {
-          "home": "#5687d1",
-          "product": "#7b615c",
-          "search": "#de783b",
-          "account": "#6ab975",
+          "facebook": "#3b5998",
+          "twitter": "#00aced",
+          "rss": "#FF6600",
+          "elmo": "#F00000 ",
           "other": "#a173d1",
-          "end": "#bbbbbb"
+          "invalid": "#bbbbbb"
         };
          
         // Total size of all segments; we set this later, after loading the data.
@@ -112,7 +112,7 @@ block content
          
         // Use d3.text and d3.csv.parseRows so that we do not need to have a header
         // row, and can receive the csv as an array of arrays.
-        d3.text("https://gist.githubusercontent.com/kerryrodden/7090426/raw/ad00fcf422541f19b70af5a8a4c5e1460254e6be/visit-sequences.csv", function(text) {
+        d3.text("json/visit-sequences.csv", function(text) {
           var csv = d3.csv.parseRows(text);
           var json = buildHierarchy(csv);
           console.log(json);
